# AnimeSorter

./: .dockerignore  .gitignore  .kilocodemodes  .pre-commit-config.yaml  .roomodes  AnimeSorter.spec  CLEANUP_PROGRESS.md  CLEANUP_ROADMAP.md  Dockerfile  INSTALL.md  Makefile  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TODO.md  animesorter_ui_ux_refactor_prd.txt  benchmark_performance.py  build_exe.py  cleaning_results_20250712_033854.json  cleaning_results_20250712_034328.json  cleaning_results_20250712_034430.json  cleaning_results_20250712_034716.json  cleaning_results_20250712_034842.json  cleaning_results_20250712_034936.json  code_refactoring_prd.txt  comprehensive_fix_tmdb_client.py  config.yaml  config_template.yaml  config_test.py  create_release.py  create_test_files.py  docker-compose.yml  file_parsing_search_move_algorithm_improvement_report.md  filenames.txt  final_fix_tmdb_client.py  fix_init_indentation.py  fix_tmdb_client_syntax.py  gemini-mcp-server.js  ing and anime data management  main.py  (+21 more)
.claude/agents/: task-checker.md  task-executor.md
.clinerules/: cline_rules.md  dev_workflow.md  self_improve.md  taskmaster.md
.cursor/rules/: animesorter-project-structure.mdc  cache-db-rules.mdc  error-handling-logging-rules.mdc  file-cleaner-rules.mdc  file-manager-rules.mdc  gui-threading-rules.mdc  python-rules.mdc  tmdb-plugin-rules.mdc
.github/workflows/: code-quality.yml
.kilo/rules/: dev_workflow.md  kilo_rules.md  self_improve.md  taskmaster.md
.kilo/rules-architect/: architect-rules
.kilo/rules-ask/: ask-rules
.kilo/rules-code/: code-rules
.kilo/rules-debug/: debug-rules
.kilo/rules-orchestrator/: orchestrator-rules
.kilo/rules-test/: test-rules
.kiro/hooks/: tm-code-change-task-tracker.kiro.hook  tm-complexity-analyzer.kiro.hook  tm-daily-standup-assistant.kiro.hook  tm-git-commit-task-linker.kiro.hook  tm-pr-readiness-checker.kiro.hook  tm-task-dependency-auto-progression.kiro.hook  tm-test-success-task-completer.kiro.hook
.kiro/steering/: dev_workflow.md  kiro_rules.md  self_improve.md  taskmaster.md  taskmaster_hooks_workflow.md
.taskmaster/reports/: final-release-summary.md  static-analysis-summary.md
.trae/rules/: dev_workflow.md  self_improve.md  taskmaster.md  trae_rules.md
.windsurf/rules/: dev_workflow.md  self_improve.md  taskmaster.md  windsurf_rules.md
_backup/dead_code_removal_20250906_122854/: __init__.py  error_bus.py  file_commands.py  global_exception_handler.py  i_view_model.py  organize_commands.py
_legacy_managers/components_managers/: i18n_manager.py  ui_migration_manager.py  ui_state_manager.py
_legacy_managers/managers/: __init__.py  anime_data_manager.py  command_system_manager.py  event_handler.py  status_bar_manager.py
_legacy_managers/other_managers/: core_event_handler_manager.py  staging_manager.py  ui_component_manager.py  undo_redo_manager.py  window_manager.py
_legacy_managers/safety_managers/: backup_manager.py  confirmation_manager.py  interruption_manager.py  safety_manager.py
api_response/: discover-movie.json  discover-tv.json  genre-movie-list.json  genre-tv-list.json  movie-movie-id.json  search-movie.json  search-multi.json  search-tv.json  tv-tv_id-image.json  tv-tv_id-season-season_number.json  tv-tv_id.json
continue-plans/: REFACTORING_SUMMARY.md
docs/: AnimeSorter 프로젝트 분석.md  Project_Job_Description.md  Project_Overview.md  README.md  python_rules.md
documents/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SCHEDULE.md  QUICK_START.md  USER_GUIDE.md  python_animesorter_pyqt5_template.py
scripts/: README_rename_videos.md  agent-workflow.py  analyze_file_matching.py  convert_all_prints.py  convert_prints_to_logger.py  dev.bat  dev.ps1  quality-check.ps1  quality-check.sh  rename_kiwi_anime.bat  rename_kiwi_anime.ps1  rename_videos_to_match_subtitles.py  replace_prints_in_file.py
src/: __init__.py  __main__.py  cache_db.py  config.py  exceptions.py  file_cleaner.py  file_manager.py  logger.py  main.py  py.typed
src/.animesorter_cache/: search_Apocalypse Hotel_None_False_None.json  search_Arifureta Shokugyou de Sekai Saikyou_None_False_None.json  search_Dainanaoji_None_False_None.json  search_Dandadan_None_False_None.json  search_Isekai Mokushiroku Mynoghra_None_False_None.json  search_Koujo Denka no Kateikyoushi_None_False_None.json  search_Kusuriya no Hitorigoto_None_False_None.json  search_Mieruko chan_None_False_None.json  search_Mizuzokusei no Mahoutsukai_None_False_None.json  search_Nukitashi The Animation_None_False_None.json  search_Shirohiyo_None_False_None.json  search_Silent Witch Chinmoku no Majo no Kakushigoto_None_False_None.json  search_Tsuihousha Shokudou e Youkoso!_None_False_None.json  search_Uma Musume： Pretty Derby_None_False_None.json  search_With Vengeance Sincerely Your Broken Saintess_None_False_None.json  search_Yuusha Party o Tsuihou Sareta Shiro Madoushi_None_False_None.json  search_Zutaboro Reijou wa Ane no Moto Konyakusha ni Dekiai sareru_None_False_None.json
src/animesorter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/app/: __init__.py  application_events.py  background_events.py  background_task.py  container.py  domain.py  events.py  file_processing_events.py  media_data_events.py  organization_events.py  safety_events.py  setup.py  tmdb_search_events.py  ui_events.py
src/config/: config_manager.py
src/core/: __init__.py  advanced_classifier.py  anitopy_parser.py  async_file_manager.py  cache_db.py  cancellation.py  cleaner.py  cli.py  config.py  constants.py  error_bus.py  error_handler.py  error_logger.py  event_queue.py  events.py  file_backup.py  file_cleaner.py  file_handler.py  file_manager.py  file_naming.py  file_parser.py  file_validation.py  logging_config.py  (+23 more)
tests/: __init__.py  code_quality_review_report.py  conftest.py  module_test.py  quality_dashboard.py  quality_metrics_collector.py  simple_run.py  simple_test.py  test.py  test_base_components.py  test_cleaner.py  test_file_scanworker.py
tools/: print_to_logger.py
venv_new/: pyvenv.cfg
(+399 files in other folders)
