[project]
name = "anime_file_sorter"
version = "0.1.0"
description = "Anime file renamer and sorter"
authors = [{name = "tigers2020"}]
dependencies = [
    "guessit>=3.4.3",
    "rapidfuzz>=3.6.1",
    "pytest>=7.4.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0.0",
    "loguru>=0.6.0",
    "aiofiles>=0.8.0",
    "thefuzz>=0.19.0",
    "aiosqlite>=0.17.0",
    "PyQt6",
    "requests>=2.31.0"
]

[project.scripts]
anime-sorter = "src.anime_file_sorter.core.cli:main" 